<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="supported_text">Supported by</string>
    <string name="gads_logo">Gads Leadership Listing</string>
    <string name="pluralsight_logo">Pluralsight Logo</string>
    <string name="andela_logo">AndelaLogo</string>
    <string name="grow_with_google_logo">Grow with Google</string>
    <string name="title_activity_leader_listing">LeaderListing</string>
    <string name="leader_board">leaderBoard</string>
    <string name="skill_board">SkillIQ leaders</string>
    <string name="button_text">Submit</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo_image">top logo image</string>
    <string name="action_back">Action Back</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="confirm_submmission">Are you sure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>